[0.5.2] Добавление кодировки UTF-8

--- a/build.gradle
+++ b/build.gradle
@@ -45,3 +45,6 @@ processResources {
         expand props
     }
 }
+
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
